# alpenhorn-chime

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yaml
alpenhorn_chime/: __init__.py  detection.py  info.py  inst.py  reserving.py  types.py  util.py
alpenhorn_chime/hpss/: __init__.py  node.py  ops.py
alpenhorn_chime/info/: __init__.py  base.py  cal.py  corr.py  hfb.py  rawadc.py  weather.py
test/: conftest.py  test_import.py  test_util.py
test/testdata/: alpenhorn.yaml
test/testdata/20201101T000000Z_chime_gain/: 00358972.h5
test/testdata/20210321T121000Z_chime_digitalgain/: 00001101.h5
test/testdata/20220101T000000Z_chime_flaginput/: 00947042.h5
test/testdata/20220129T233553Z_chimetiming_corr/: 00000000_0000.h5
test/testdata/20221101T000000Z_chime_weather/: 20221106.h5
test/testdata/20230213T201433Z_chime_rawadc/: 000003.h5
