[build-system]
requires = ["setuptools>=61.0.0.", "wheel", "setuptools-git-versioning"]
build-backed = "setuptools.build_meta"

[project]
name = "alpenhorn_chime"
authors = [
  {name = "D. V. Wiebe for the CHIME Collaboration", email = "dvw@phas.ubc.ca"}
]
description = "CHIME extensions for alpenhorn-2."
requires-python = ">=3.10"
dynamic = ["readme", "version"]
license = {file = "LICENSE"}
dependencies = [
  "alpenhorn @ git+https://github.com/radiocosmology/alpenhorn.git",
  "chimedb @ git+https://github.com/chime-experiment/chimedb.git",
  "chimedb.cfm @ git+https://github.com/chime-experiment/chimedb_cfm.git",
  "chimedb.data_index @ git+https://github.com/chime-experiment/chimedb_di.git",
  "h5py",
  "numpy",
]

[project.optional-dependencies]
test = [
  "pytest >= 7.0"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools-git-versioning]
enabled = true
